{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 38,
  "lineage": "666af513-9b4d-403b-e881-f4df1f9cd9b7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:561141729880:internet-gateway/igw-0087b21dca5511e0e",
            "id": "igw-0087b21dca5511e0e",
            "owner_id": "561141729880",
            "tags": {
              "Name": "terraform-eks-ig"
            },
            "tags_all": {
              "Name": "terraform-eks-ig"
            },
            "vpc_id": "vpc-07cc3264479232a96"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:561141729880:route-table/rtb-0d9892e3de844040e",
            "id": "rtb-0d9892e3de844040e",
            "owner_id": "561141729880",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0087b21dca5511e0e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07cc3264479232a96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_ig",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025ace2921c9a5992",
            "route_table_id": "rtb-0d9892e3de844040e",
            "subnet_id": "subnet-0d192aa929626c503"
          },
          "dependencies": [
            "aws_internet_gateway.eks_ig",
            "aws_route_table.eks_rt",
            "aws_subnet.eks_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0443c445ed9d268e4",
            "route_table_id": "rtb-0d9892e3de844040e",
            "subnet_id": "subnet-0efadac0050415da0"
          },
          "dependencies": [
            "aws_internet_gateway.eks_ig",
            "aws_route_table.eks_rt",
            "aws_subnet.eks_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:561141729880:security-group/sg-098fe7451073e7292",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098fe7451073e7292",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP connection",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPs connection",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh connection",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              }
            ],
            "name": "terraform-eks-dev-cluster",
            "name_prefix": "",
            "owner_id": "561141729880",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-dev"
            },
            "tags_all": {
              "Name": "terraform-eks-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cc3264479232a96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dev-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "102.88.35.54/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-604470471",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-098fe7451073e7292",
            "security_group_rule_id": "sgr-08211a5f393f1a2a0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dev-cluster",
            "aws_vpc.eks_vpc",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:561141729880:subnet/subnet-0d192aa929626c503",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.100.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d192aa929626c503",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "561141729880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-dev-node",
              "kubernetes.io/cluster/dev-cluster": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-dev-node",
              "kubernetes.io/cluster/dev-cluster": "shared"
            },
            "vpc_id": "vpc-07cc3264479232a96"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:561141729880:subnet/subnet-0efadac0050415da0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efadac0050415da0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "561141729880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-dev-node",
              "kubernetes.io/cluster/dev-cluster": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-dev-node",
              "kubernetes.io/cluster/dev-cluster": "shared"
            },
            "vpc_id": "vpc-07cc3264479232a96"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:561141729880:vpc/vpc-07cc3264479232a96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0e10341c4ca5c5196",
            "default_route_table_id": "rtb-05ebf957ce7695db4",
            "default_security_group_id": "sg-05638305b4e6f4346",
            "dhcp_options_id": "dopt-02fdc9176b1f8639f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07cc3264479232a96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ebf957ce7695db4",
            "owner_id": "561141729880",
            "tags": {
              "Name": "terraform-eks-dev-node",
              "kubernetes.io/cluster/dev-cluster": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-dev-node",
              "kubernetes.io/cluster/dev-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}